force-app/main/default/objects/Custom_Approval_Matrix__c/Custom_Approval_Matrix__c.object-meta.xml
<CustomObject>
    <description>Stores the criteria for various types of approvals for CLM, CPQ and Knowledge articles workflows</description>
    <label>Custom Approval Matrix</label>
    <nameField>
        <label>Custom Approval Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Approval Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>