force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is Approval Matrix Active?
If Inactive then system will ignore the matrix entry when sending the approvals to the user.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>