force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Agreement_Minimum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Minimum_Discount__c</fullName>
    <description>This formula field specify minimum agreement discount.</description>
    <formula>IF(
OR(
RecordType.DeveloperName == &apos;CLM_Discount&apos; ,
RecordType.DeveloperName == &apos;CLM_Material_Group_1&apos;,
RecordType.DeveloperName == &apos;CLM_Material_Number&apos; 
), 
Discount_Level_1__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Minimum Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>