force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Agreement_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Record_Type__c</fullName>
    <description>This picklist stores agreement record types.</description>
    <label>Agreement Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner Agreement</fullName>
            </value>
            <value>
                <fullName>Master Customer Agreement</fullName>
            </value>
            <value>
                <fullName>Master Service Agreement</fullName>
            </value>
            <value>
                <fullName>Negotiated Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>Standing Quote</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>