force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Approval_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy__c</fullName>
    <description>This lookup field is used to reference Approval Hierarchy where Approval Hierarchy Type is not equal to CPQ Sales or CLM Sales.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Hierarchy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Approval_Hierarchy__c.Approval_Hierarchy_Type__c</field>
            <operation>notEqual</operation>
            <value>CPQ Sales Hierarchy</value>
        </filterItems>
        <filterItems>
            <field>Approval_Hierarchy__c.Approval_Hierarchy_Type__c</field>
            <operation>notEqual</operation>
            <value>CLM Sales Hierarchy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Custom Approval Matrix</relationshipLabel>
    <relationshipName>Custom_Approval_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>