force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Approval_Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Type__c</fullName>
    <description>DCP-39486 : Represents the Type of Approval Hierarchy</description>
    <label>Approval Hierarchy Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Owner</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>