force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount Percent for Sales Discretionary Discount</description>
    <label>Discount %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>