force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Discount_Amount_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Level_1__c</fullName>
    <description>Discount Amount for Level 1</description>
    <label>Discount Amount (Level 1)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>