force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Discount_Amount_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Level_3__c</fullName>
    <description>This number field denotes Discount Amount for Level 3</description>
    <label>Discount Amount (Level 3)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>