force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Discount_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_1__c</fullName>
    <description>This field denotes Discount percentage for Level 1.</description>
    <label>Discount % (Level 1)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>