force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Discount_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_2__c</fullName>
    <description>Discount Percent for Level 2</description>
    <label>Discount % (Level 2)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>