force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Discount_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_3__c</fullName>
    <description>Discount Percent for Level 3</description>
    <label>Discount % (Level 3)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>