force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Material_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_1__c</fullName>
    <description>The multi-select picklist  for Material Group.</description>
    <label>Material Group 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Material_Group_1</valueSetName>
    </valueSet>
</CustomField>