force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the material number for Agreement line approvals</description>
    <label>Material Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Approval Matrix (Material Number)</relationshipLabel>
    <relationshipName>Custom_Approval_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>