force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Min_Discount__c.field-meta.xml
<CustomField>
    <fullName>Min_Discount__c</fullName>
    <description>This field denotes minimum discount percentage.</description>
    <label>Min Discount %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>