force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Min_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Discount_Amount__c</fullName>
    <description>This field stores minimum discount amount.</description>
    <label>Min Discount Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>