force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Post_Pricing_Message__c.field-meta.xml
<CustomField>
    <fullName>Post_Pricing_Message__c</fullName>
    <description>This field stores pricing message.</description>
    <label>Post Pricing Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Standard Post Pricing Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>