force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Indicates that transactions with indicated Price List Type (Pricebook) should use this matrix for approvals, according to access sequence rules</description>
    <label>Price List Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_List_Type</valueSetName>
    </valueSet>
</CustomField>