force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Product which needs to be approved i.e. SKU Approvals</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Approval Matrix</relationshipLabel>
    <relationshipName>Custom_Approval_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>