force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <description>This lookup field represent the associated incentive.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Custom Approval Matrix (Promotion)</relationshipLabel>
    <relationshipName>Custom_Approval_Matrix5</relationshipName>
    <type>Lookup</type>
</CustomField>