force-app/main/default/objects/Custom_Approval_Matrix__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Field to capture the Sale region of the custom approval matrix records.</description>
    <inlineHelpText>Select the region(s) that apply to this custom approval matrix.</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>AMR</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <isActive>false</isActive>
                <label>APAC</label>
            </value>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
                <isActive>false</isActive>
                <label>APJ</label>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <isActive>false</isActive>
                <label>EMEA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>