force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/Clause_Approval.recordType-meta.xml
<RecordType>
    <fullName>Clause_Approval</fullName>
    <active>true</active>
    <label>Clause Approval</label>
</RecordType>