force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/CLM_Discount.recordType-meta.xml
<RecordType>
    <fullName>CLM_Discount</fullName>
    <active>true</active>
    <description>Define approval matrix for Agreement level CLM discount approvals</description>
    <label>CLM Discount</label>
</RecordType>