force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/CLM_Material_Group_1.recordType-meta.xml
<RecordType>
    <fullName>CLM_Material_Group_1</fullName>
    <active>true</active>
    <description>Define approval matrix for Agreement level CLM Material Group 1approvals</description>
    <label>CLM Material Group 1</label>
</RecordType>