force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/CLM_Material_Number.recordType-meta.xml
<RecordType>
    <fullName>CLM_Material_Number</fullName>
    <active>true</active>
    <description>Define approval matrix for Agreement level CLM Material Number approvals</description>
    <label>CLM Material Number</label>
</RecordType>