force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/CPQ_Discount.recordType-meta.xml
<RecordType>
    <fullName>CPQ_Discount</fullName>
    <active>true</active>
    <description>Define approval matrix for Sales Discretionary Discount</description>
    <label>CPQ Discount</label>
</RecordType>