force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/CPQ_Material_Group_1.recordType-meta.xml
<RecordType>
    <fullName>CPQ_Material_Group_1</fullName>
    <active>true</active>
    <description>Define approval matrix for Product Group level approvals</description>
    <label>CPQ Material Group 1</label>
</RecordType>