force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/CPQ_Material_Number.recordType-meta.xml
<RecordType>
    <fullName>CPQ_Material_Number</fullName>
    <active>true</active>
    <description>Define approval matrix for SKU level approvals</description>
    <label>CPQ Material Number</label>
</RecordType>