force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/Inco_Terms.recordType-meta.xml
<RecordType>
    <fullName>Inco_Terms</fullName>
    <active>true</active>
    <description>Define approval matrix for Inco Terms Approvals</description>
    <label>Inco Terms</label>
</RecordType>