force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/Knowledge_Approval_Matrix.recordType-meta.xml
<RecordType>
    <fullName>Knowledge_Approval_Matrix</fullName>
    <active>true</active>
    <description>Record type for Managing Knowledge Approval Matrix.</description>
    <label>Knowledge Approval Matrix</label>
</RecordType>