force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/Payment_Term.recordType-meta.xml
<RecordType>
    <fullName>Payment_Term</fullName>
    <active>true</active>
    <description>For Payment Term Approvals</description>
    <label>Payment Term</label>
</RecordType>