force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/Post_Pricing_Message.recordType-meta.xml
<RecordType>
    <fullName>Post_Pricing_Message</fullName>
    <active>true</active>
    <description>Approval Matrix - PPM (Post Pricing Message) Approval</description>
    <label>Post Pricing Message</label>
</RecordType>