force-app/main/default/objects/Custom_Approval_Matrix__c/recordTypes/Promotion.recordType-meta.xml
<RecordType>
    <fullName>Promotion</fullName>
    <active>true</active>
    <description>Define approval matrix for Promotion Discount</description>
    <label>Promotion</label>
</RecordType>