force-app/main/default/objects/Custom_Approval_Matrix__c/validationRules/CheckAllApprovalHierarchyTypeCustom.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAllApprovalHierarchyTypeCustom</fullName>
    <active>true</active>
    <description>Makes approval hierarchy lookup required if approval hierarchy type contains custom.</description>
    <errorConditionFormula>AND (
				NOT( ISBLANK( Approval_Hierarchy_Type__c ) ),
    INCLUDES( Approval_Hierarchy_Type__c, &quot;Custom&quot; ),
    Approval_Hierarchy__c = &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Approval_Hierarchy__c</errorDisplayField>
    <errorMessage>Please associate Approval hierarchy lookup when the approval hierarchy type is Custom.</errorMessage>
</ValidationRule>