force-app/main/default/objects/Custom_Approval_Matrix__c/validationRules/CheckAllApprovalHierarchyTypeRecordOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAllApprovalHierarchyTypeRecordOwner</fullName>
    <active>true</active>
    <description>Prompts user to not populate Approval hierarchy lookup field when Approval hierarchy type does not contain Custom.</description>
    <errorConditionFormula>AND (
				NOT( ISBLANK( Approval_Hierarchy_Type__c ) ),
    NOT( INCLUDES( Approval_Hierarchy_Type__c, &quot;Custom&quot; ) ),
    NOT( ISBLANK( Approval_Hierarchy__c ) )
)</errorConditionFormula>
    <errorDisplayField>Approval_Hierarchy__c</errorDisplayField>
    <errorMessage>Approval hierarchy lookup can only be added for custom approval hierarchy type.</errorMessage>
</ValidationRule>