force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/AMR_Payment_Terms_Approval_Queue_Custom_Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>AMR_Payment_Terms_Approval_Queue_Custom_Approval_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>AMR Payment Terms Approval Queue</label>
    <queue>AMR_Payment_Terms_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>