force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/APAC.listView-meta.xml
<ListView>
    <fullName>APAC</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>APAC  Payment Terms Approval Queue</label>
    <queue>APAC_Payment_Terms_Approval_Queue</queue>
</ListView>