force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/APAC_Incoterms_Approval_Queue_Custom_Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>APAC_Incoterms_Approval_Queue_Custom_Approval_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Incoterms Approval Queue</label>
    <queue>APAC_Incoterms_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>