force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/China_Contract_Admin_Queue_Custom_Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>China_Contract_Admin_Queue_Custom_Approval_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>China Contract Admin Queue</label>
    <queue>China_Contract_Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>