force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/CN03_Dx_Approval_Queue_Custom_Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>CN03_Dx_Approval_Queue_Custom_Approval_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>CN03 Dx Approval Queue</label>
    <queue>CN03_Dx_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>