force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/CP_Quality_Approval_Queue_Custom_Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>CP_Quality_Approval_Queue_Custom_Approval_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>CP Quality Approval Queue</label>
    <queue>CP_Quality_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>