force-app/main/default/objects/Custom_Approval_Matrix__c/listViews/CP_Regional_Account_Receivable_Queue_Custom_Approval_Matrix.listView-meta.xml
<ListView>
    <fullName>CP_Regional_Account_Receivable_Queue_Custom_Approval_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>CP Regional Account Receivable Queue</label>
    <queue>CP_Regional_Account_Receivable_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>